force-app/main/default/objects/inspire1__Risk__c/inspire1__Risk__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Track, manage and report on project risks in order to mitigate potential issues.</description>
    <label>Risks &amp; Issues</label>
    <nameField>
        <displayFormat>RISK-{000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks &amp; Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>