force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Category__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>