force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Date_Closed__c</fullName>
    <description>Defines date when Risk was closed.</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>