force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Date_Opened__c</fullName>
    <description>Defines date when Risk was identified.</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>