force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Impact_Description__c</fullName>
    <description>Summary of potential impact to project.</description>
    <inlineHelpText>Summary of potential impact to project. What will happen if the risk is not mitigated or eliminated?</inlineHelpText>
    <label>Impact Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>