force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Mitigation_Notes__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Mitigation_Notes__c</fullName>
    <description>Capture details as to how the risk will be mitigated.</description>
    <inlineHelpText>Define the steps or actions that can be taken to lower or eliminate the impact or probability.</inlineHelpText>
    <label>Mitigation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>