force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Owner__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the user the risk is assigned to.</description>
    <inlineHelpText>Define who the risk or issue has been assigned to.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>