force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Priority_Indicator__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Priority_Indicator__c</fullName>
    <description>Displays icon indicator for Priority Level.</description>
    <formula>IF(inspire1__Priority_Level__c &lt; 6, IMAGE(&quot;/resource/inspire1__Green_Icon&quot;, &quot;GREEN&quot;),
IF( inspire1__Priority_Level__c &gt; 19, IMAGE(&quot;/resource/inspire1__Red_Icon&quot;, &quot;RED&quot;), IMAGE(&quot;/resource/inspire1__Amber_Icon&quot;, &quot;AMBER&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Indicator</label>
    <type>Text</type>
</CustomField>