force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Priority_Level__c</fullName>
    <formula>VALUE(TEXT(inspire1__Impact_Level__c)) * VALUE(TEXT(inspire1__Probability_Level__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>