force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Probability_Level__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Probability_Level__c</fullName>
    <description>Defines the probability of the risk to occur.</description>
    <inlineHelpText>Define the risk probability rating. Rate 1 (LOW) to 5 (HIGH).</inlineHelpText>
    <label>Probability Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>