force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <description>Project the Risk is related to.</description>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipName>Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>