force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Related_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Related_Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Task the Risk or Issue is related to.</description>
    <label>Related Project Task</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Project Task that belongs to the same Project.</errorMessage>
        <filterItems>
            <field>inspire1__Project_Tasks__c.inspire1__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.inspire1__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>