force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Risk_Description__c</fullName>
    <description>Summary of the risk.</description>
    <inlineHelpText>Provide a brief summary of the risk or issue.</inlineHelpText>
    <label>Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>