force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Risk_Status__c</fullName>
    <description>Defines the current status of Risk.</description>
    <inlineHelpText>Define the current status of Risk.</inlineHelpText>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>