force-app/main/default/objects/inspire1__Risk__c/fields/inspire1__Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Type__c</fullName>
    <description>Defines if the record is either a Risk or an Issue.</description>
    <inlineHelpText>The key difference is an “issue” already has occurred and a “risk” is a potential issue that may or may not happen and can impact the project positively or negatively.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
                <default>true</default>
                <label>Risk</label>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>